[gd_scene load_steps=11 format=2]

[ext_resource path="res://Background 1/Train_Day.png" type="Texture" id=1]
[ext_resource path="res://Yahoo/Sprite Male Dark Hair Neu01.png" type="Texture" id=2]
[ext_resource path="res://Lady/sprite female dark hair Neu01.png" type="Texture" id=3]
[ext_resource path="res://Dialogue.gd" type="Script" id=4]
[ext_resource path="res://Control.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Anime Inept.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/FuturaHandwritten.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 6 )

[node name="RoomTempura" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 499.935, 308.651 )

[node name="Dialogue" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Train_Day" type="Sprite" parent="."]
position = Vector2( 515.439, 305.047 )
scale = Vector2( 0.535062, 0.556201 )
texture = ExtResource( 1 )

[node name="1" type="Position2D" parent="."]
position = Vector2( 153.235, 431.195 )

[node name="2" type="Position2D" parent="."]
position = Vector2( 399.123, 431.195 )

[node name="3" type="Position2D" parent="."]
position = Vector2( 687.774, 431.195 )

[node name="4" type="Position2D" parent="."]
position = Vector2( 899.808, 431.195 )

[node name="Control" type="Control" parent="."]
margin_left = -81.1732
margin_top = 198.214
margin_right = -41.1732
margin_bottom = 238.214
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Male" type="Sprite" parent="Control"]
position = Vector2( 234.408, 216.602 )
texture = ExtResource( 2 )
offset = Vector2( 41.9127, 190.58 )

[node name="Lady" type="Sprite" parent="Control"]
position = Vector2( 991.981, 215.808 )
texture = ExtResource( 3 )

[node name="TextBox" type="ColorRect" parent="Control"]
margin_left = 136.921
margin_top = 216.602
margin_right = 999.921
margin_bottom = 374.602
color = Color( 0.364706, 0.372549, 0.541176, 0.760784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextBox"]
margin_left = 43.0
margin_top = 79.0
margin_right = 834.0
margin_bottom = 158.0
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Control/TextBox"]

[node name="Label" type="Label" parent="Control/TextBox"]
margin_left = 13.4001
margin_right = 139.4
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "Yahoo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="Control"]
margin_left = 374.108
margin_top = 147.0
margin_right = 581.108
margin_bottom = 199.0
custom_fonts/font = SubResource( 3 )
text = "Choice 1"

[node name="Button2" type="Button" parent="Control"]
margin_left = 639.841
margin_top = 147.0
margin_right = 846.841
margin_bottom = 199.0
custom_fonts/font = SubResource( 3 )
text = "Choice 2"

[connection signal="pressed" from="Control/Button1" to="Control" method="_on_Button1_pressed"]
[connection signal="pressed" from="Control/Button2" to="Control" method="_on_Button2_pressed"]
